src/testsuite/single/tests/compiler/fail/var_to_nonvar.c
TYPETEST

void foo(int x) {
}

void bar() {
    foo( ({ })...);
}
